@@ -1,3 +1,7 @@
+2002-08-26 Christoph Cullmann <cullmann@kde.org>
+  * Fixes for folding, cleanup, move folding tree into the buffer,
+    add some inliner's
+
 2002-06-01 Christian Couder <christian@kdevelop.org>
   * Move view stuff from katedocument to kateviewinternal.
 
